[tool.poetry]
name = "expiration"
version = "0.1.0"
description = "Expiration service for URL Shortener"
authors = ["Dai Nguyen <ngtrdai290197@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
rq = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
